# xornet

./: .gitmodules  CMakeLists.txt  convert_xornet.py  readme.md  train_xornet.py
src/: main.cpp
